<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_food_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ecse321.mcgill.ca.foodtruckmanagementandroid.FoodMenu"
    tools:showIn="@layout/activity_food_menu">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#FF0000"
            android:id="@+id/error_name"
            android:hint="@string/error_name"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#FF222222"
            android:textSize="19dp"
            android:text="@string/MenuItems_Label" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="203dp"
            android:id="@+id/MenuItem"
            android:hint="@string/MenuItem_hint" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/AddMenuIte_button"
            android:layout_gravity="end"
            android:layout_marginRight="220dp"
            android:onClick="addMenuItem"/>
        <LinearLayout

            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/menuspinner_label"/>

            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/menuspinner"/>


        </LinearLayout>

        <LinearLayout

            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#FF222222"
                android:textSize="19dp"
                android:text="@string/ClaimOrder_Label" />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="203dp"
                android:id="@+id/MenuItemAmount"
                android:hint="@string/MenuItemAmount_hint" />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/claimOrder_button"
                android:layout_gravity="end"
                android:layout_marginRight="250dp"
                android:onClick="claimOrder"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="158dp"
                android:text="@string/ViewPopReport_button"
                android:layout_gravity="end"
                android:layout_marginRight="180dp"
                android:onClick="popReport"/>


        </LinearLayout>
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FoodItemMenu_list">>

        </ListView>

        </LinearLayout>


</RelativeLayout>
