<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_supply_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ecse321.mcgill.ca.foodtruckmanagementandroid.SupplyMenu"
    tools:showIn="@layout/activity_supply_menu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout

            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#FF0000"
                android:id="@+id/error_name"
                android:hint="@string/error_name"/>

        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#FF222222"
            android:textSize="19dp"
            android:text="@string/supplyMenu_Label"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/foodSupply_name"
            android:hint="@string/foodSupply_hint"
            />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/foodSupplyAmount_name"
            android:hint="@string/foodSupplyAmount_hint"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/addSupply_button"
                android:layout_gravity="end"
                android:onClick="addFoodSupply"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/removeSupply_button"
                android:layout_gravity="end"
                android:onClick="removeFoodSupply"/>
        </LinearLayout>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/equipmentSupply_name"
            android:hint="@string/equipmentSupply_hint"
            />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/equipmentSupplyAmount_name"
            android:hint="@string/equipmentSupplyAmount_hint"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/addSupply_button"
                android:layout_gravity="end"
                android:onClick="addEquipment"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/removeSupply_button"
                android:layout_gravity="end"
                android:onClick="removeEquipment"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
