<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ecse321.mcgill.ca.foodtruckmanagementandroid.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:textSize="30sp"
                android:textColor= "#F000"
                android:text="Welcome to the Food Truck Manager"

                />
        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <blink xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="169dp"
            android:layout_height="31dp"
            android:layout_marginLeft="120dp"
            android:textColor="#F000"
            android:text="Click any button"
            />
        </blink>
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="1">

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/supplyMenu_button"
                android:layout_marginLeft="100dp"
                android:layout_gravity="end"
                android:onClick="supplyMenu"
                android:layout_weight="0.14"
                android:id="@+id/button" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/EmployeeMenu_button"
                android:layout_marginLeft="100dp"
                android:layout_gravity="end"
                android:onClick="employeeMenu"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/MenuiItemMenu_button"
                android:layout_marginLeft="100dp"
                android:layout_gravity="end"
                android:onClick="MenuItemMenu"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
